<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jesusvillarroya.davidluna.example.practice1_e6_2.Activity2">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/bienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/iv1"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="89dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

    <EditText
        android:id="@+id/et3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/direcci_n_web"
        android:inputType="textPersonName"
        android:textColorLink="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/b2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="goWeb"
        android:text="@string/visitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="68dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/s1"
        android:layout_width="213dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/qu_te_gustar_a_hacer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/has_hecho_ya_las_pr_cticas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s1" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="doTask"
        android:text="@string/hacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="saveTasks"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:onClick="finishView"
        android:text="@string/cerrar_sessi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3" />
</android.support.constraint.ConstraintLayout>
